# MultiAgent_promptSafetyEvaluation

./: .gitignore  Promtps - Hoja 4.csv  README.md  analyze.py  prompts.txt  pyproject.toml  results_llama2.csv  results_mistral.csv  results_phi3.csv  results_uruguay.csv  run_llama2.py  run_mistral.py  run_phi3.py  test_uruguay.py
configs/: experiment.yaml  judges.yaml  models.yaml
configs/agents/: critical_agent.yaml  ethics_agent.yaml  policy_agent.yaml  security_agent.yaml
data/evaluations/judges-full/: disagreement_metrics.jsonl  evaluations.jsonl  run_metadata.json
data/evaluations/pilot-2blocks/: disagreement_metrics.jsonl  evaluations.jsonl  run_metadata.json
data/prompts/manual/: overrides.sample.jsonl
data/prompts/processed/: prompts.jsonl
data/prompts/source/: harmbench_multilingual.csv
results/runs/dry-e8751944/: config_snapshot.yaml  evaluations.jsonl  metrics.json  responses.jsonl  run_metadata.json
results/runs/phase0-demo/: disagreement_metrics.jsonl  (+5 more)
src/config/: __init__.py  judges_loader.py  loader.py
src/data/: __init__.py  column_mapping.py  import_prompts.py  import_prompts_txt.py  txt_variants.py
src/disagreement/: __init__.py  metrics.py
src/evaluation/: __init__.py  judge.py  ollama_client.py
src/pipeline/: evaluate_prompts.py  import_prompts.py  import_prompts_txt.py  mock_data.py  run_experiment.py
src/schemas/: __init__.py  evaluation.py  experiment.py  prompt.py  response.py
tests/: test_disagreement_metrics.py  test_import_prompts.py  test_import_prompts_txt.py  test_pipeline_integration.py  test_schemas.py
(+3 files in other folders)
