[project]
name = "agent-disagreement-safety"
version = "0.1.0"
description = "Research pipeline: can agent disagreement predict unsafe LLM outputs across languages?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.scripts]
run-experiment = "src.pipeline.run_experiment:app"
import-prompts = "src.pipeline.import_prompts:app"
import-prompts-txt = "src.pipeline.import_prompts_txt:app"
evaluate-prompts = "src.pipeline.evaluate_prompts:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
